--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     </head>
     <body>
         <article>
-        <h1>&#128075; Hi! I'm [...]</h1>
         <p>
             Welcome to my GitHub account. 
         </p>
@@ -19,6 +18,10 @@
             <li>I speak [...]</li>
             <li>I am currently learning how to use GitHub because [...]</li>
             <li>I like to [...]</li>
+            <li>I am originally from [Greece]</li>
+            <li>I speak [greek]</li>
+            <li>I am currently learning how to use GitHub because [I have a group project to deal with for the course of datalogical thinking]</li>
+            <li>I like to [sing, read books e.t.c]</li>
         </ul>
         </article>
         <article>
